<resources>
    <string name="app_name">EnterpriseTaskScheduler</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="view_all">View All</string>
    <string name="department">Department</string>
    <string name="start_date">Start Date</string>
    <string name="emp_start_date_selector">empStartDateSelector</string>
    <string name="emp_dept_selector">empDeptSelector</string>
    <string name="task">Task</string>
    <string name="employee">Employee</string>
    <string name="enterprise_task_scheduler">Enterprise Task Scheduler</string>
    <string name="task_name">Task Name</string>
    <string name="end_date">End Date</string>
    <string name="id_prefix">#</string>
    <string name="description">Description</string>
    <string name="employee_name">Employee Name</string>
    <string name="task_dept_selector">taskDeptSelector</string>
    <string name="task_end_date_selector">taskEndDateSelector</string>
    <string name="task_start_date_selector">taskStartDateSelector</string>
    <string name="id">ID</string>
    <string name="due_date">Due Date</string>
    <string name="task_status">Task Status</string>
    <string name="task_detail">Task Detail</string>
    <string name="employee_detail">Employee Detail</string>
    <string name="employee_id">Employee Id</string>
    <string name="level">Level</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="assign_task">Assign Task</string>
    <string name="mark_as_complete">Mark As Complete</string>
    <string name="mark_as_cancel">Mark As Cancel</string>
    <string name="send">Send</string>
    <string name="subject"> Subject:</string>
    <string name="to"> To:</string>
    <string name="message"> Message:</string>
    <string name="select_column"> Select Display Column</string>
    <string name="apply"> Apply</string>
    <string name="cancel"> Cancel</string>
    <string name="edit"> Edit</string>
    <string name="skip_email"> Skip Email</string>
</resources>
