<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTaskID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/id"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/task_name"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerTaskLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/level"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerTaskDeptName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/department"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerTaskEmpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/employee_name"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerTaskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/task_status"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/headerStartDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/start_date"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerDueDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/due_date"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>