<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerEmpIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/id"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerEmpNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/employee_name"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerEmpLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/level"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerEmpDeptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/department"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerEmpStartDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/start_date"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerEmpEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/email"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>