<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/taskButton"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:onClick="taskMenuOnClick"
        android:text="@string/task"
        app:layout_constraintEnd_toEndOf="@+id/employeeButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/employeeButton"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/employeeButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:onClick="employeeMenuOnClick"
        android:text="@string/employee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskButton"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enterprise_task_scheduler"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/taskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>